--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,11 +13,10 @@ publish = false
 [dependencies]
 anyhow = "1.0.33"
 base64 = "0.13.0"
+curl = "0.4.34"
 env_logger = "0.8.1"
 log = "0.4.11"
-maplit = "1.0.2"
 once_cell = "1.4.1"
-reqwest = { version = "0.10.8", default-features = false, features = ["rustls-tls", "blocking", "cookies", "gzip", "json"] }
 rpassword = "5.0.0"
 rprompt = "1.0.5"
 scraper = "0.12.0"
